# deposit_app

./: .example.env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f327383f35b2_init_table_create_wallets_table.py
app/: config.py  exceptions.py
app/api/v1/routes/: wallet.py
app/db/: models.py  session.py
app/schemas/: wallet_schemas.py
app/services/: wallet_service.py
app/services/strategies/: base.py  deposit.py  withdraw.py
app/tests/: conftest.py  test_wallet_get_balance.py  test_wallet_operations.py
